Connect consumer to mongodb and postgres to fetch full information about hotels

--- a/HotelsService/appsettings.json
+++ b/HotelsService/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "HotelsDb": "Server=localhost;Database=hotels;Port=5432;User Id=guest;Password=example"
+  },
+  "DescriptionDb": {
+    "ConnectionString": "mongodb://root:example@localhost:27017",
+    "DatabaseName": "Hotels",
+    "CollectionName": "Descriptions"
   }
 }
