--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -6,15 +6,20 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
+    "@progress/kendo-react-dropdowns": "^5.2.0",
+    "@progress/kendo-react-form": "^5.2.0",
+    "@progress/kendo-react-inputs": "^5.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "progress": "^2.0.3",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.2.3",
-    "react-dom": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
