Init mongo db with test data during container startup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,8 @@ services:
           
     mongodb:
         container_name: mongodb
-        image: mongo
+        build:
+            context: ./mongodb
         restart: always
         environment:
             MONGO_INITDB_ROOT_USERNAME: "root"
