--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-common": "^5.2.0",
     "@progress/kendo-react-dropdowns": "^5.2.0",
     "@progress/kendo-react-form": "^5.2.0",
     "@progress/kendo-react-inputs": "^5.2.0",
@@ -22,6 +24,7 @@
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
