--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -16,15 +16,22 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-daterangepicker": "^3.1.0",
     "cors": "^2.8.5",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.3",
     "progress": "^2.0.3",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-bootstrap-daterangepicker": "^7.0.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
+    "rsuite": "^5.10.0",
+    "rsuite-daterangepicker": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
