--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,39 @@ services:
         ports:
             - 8080:3000
 
-   
+    api:
+        depends_on:
+            -   rabbitmq
+        container_name: api
+        build:
+            context: .
+            dockerfile: ApiGateway.Dockerfile
+        ports:
+            - 8081:80
+              
+    hotel-service:
+        depends_on:
+            - rabbitmq
+        container_name: hotel-service
+        build:
+            context: .
+            dockerfile: HotelsService.Dockerfile
+            
+    transport-service:
+        depends_on:
+            - rabbitmq
+        container_name: transport-service
+        build:
+            context: .
+            dockerfile: TransportService.Dockerfile
+            
+    trip-service:
+        depends_on:
+            - rabbitmq
+        container_name: trip-service
+        build:
+            context: .
+            dockerfile: TripService.Dockerfile
             
     rabbitmq:
         container_name: rabbitmq
@@ -47,15 +79,3 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: "example"
         ports:
             - '27017:27017'
-            
-    mongo-express:
-        container_name: mongo-express
-        image: mongo-express
-        restart: always
-        ports:
-            - '8082:8081'
-        environment:
-            ME_CONFIG_MONGODB_ADMINUSERNAME: "root"
-            ME_CONFIG_MONGODB_ADMINPASSWORD: "example"
-            ME_CONFIG_MONGODB_SERVER: "mongodb"
-            ME_CONFIG_MONGODB_URL: "mongodb://root:example@mongo:27017/"
