--- a/HotelsService/appsettings.json
+++ b/HotelsService/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HotelsDb": "Server=localhost;Database=hotels;Port=5432;User Id=guest;Password=example"
+    "HotelsDb": "Server=postgres;Database=hotels;Port=5432;User Id=guest;Password=example"
   },
   "DescriptionDb": {
-    "ConnectionString": "mongodb://root:example@localhost:27017",
+    "ConnectionString": "mongodb://root:example@mongodb:27017",
     "DatabaseName": "Hotels",
     "CollectionName": "Descriptions"
   }
