--- a/HotelsService/HotelsService.csproj
+++ b/HotelsService/HotelsService.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.4.0" />
   </ItemGroup>
 
   <ItemGroup>
