--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
             
     rabbitmq:
         container_name: rabbitmq
-        image: rabbitmq:management
+        image: heidiks/rabbitmq-delayed-message-exchange:3.9.13-management
         ports:
           - 5672:5672
           - 15672:15672
