Remove unnecessary entity EventRoom

--- a/HotelsService/HotelsService.csproj
+++ b/HotelsService/HotelsService.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\CommonComponents\CommonComponents.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\Eventroom.cs" />
+  </ItemGroup>
+
 </Project>
