--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,3 +87,14 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: "example"
         ports:
             - '27017:27017'
+    
+    mongo-express:
+        image: mongo-express
+        container_name: mongo-express
+        restart: always
+        environment:
+            ME_CONFIG_MONGODB_ADMINUSERNAME: root
+            ME_CONFIG_MONGODB_ADMINPASSWORD: example
+            ME_CONFIG_MONGODB_SERVER: mongodb
+        ports:
+            - 8083:8081
