Deploy on cluster

--- a/HotelsService/appsettings.json
+++ b/HotelsService/appsettings.json
@@ -10,8 +10,8 @@
     "HotelsDb": "Server=postgres;Database=hotels;Port=5432;User Id=guest;Password=example"
   },
   "DescriptionDb": {
-    "ConnectionString": "mongodb://root:example@mongodb:27017",
-    "DatabaseName": "Hotels",
+    "ConnectionString": "mongodb://root:student@actina15.maas:27017",
+    "DatabaseName": "RSWW_175741",
     "CollectionName": "Descriptions"
   }
 }
