--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^6.0.5",
     "@progress/kendo-licensing": "^1.2.2",
     "@progress/kendo-react-form": "^5.2.0",
     "axios": "^0.26.1",
@@ -14,8 +15,10 @@
     "react-bootstrap": "^2.3.1",
     "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-notifications": "^1.7.3",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
